# profile.ivi.OpenAVB

./: AUTHORS  COPYING  Makefile.am  NEWS  README  bootstrap  configure.ac  groups  igb.pc.in  project.config
kmod/: Makefile.am
kmod/igb/: Makefile  igb_main.c
packaging/: gptp.service  igb_avb.conf  mrpd.service  openavb.changes  openavb.env  openavb.spec
